...
        
        taskTextField.placeholder = "Enter task"
        taskTextField.textColor = .label
        taskTextField.borderStyle = .roundedRect
        taskTextField.layer.borderWidth = 1
        taskTextField.layer.borderColor = ColorManager.shared.primaryColor?.cgColor
        taskTextField.accessibilityIdentifier="new_task_field"
        taskTextField.translatesAutoresizingMaskIntoConstraints = false
        stackView.addArrangedSubview(taskTextField)
        
        addButton.addTarget(self, action: #selector(addTask), for: .touchUpInside)
        addButton.translatesAutoresizingMaskIntoConstraints = false
        addButton.backgroundColor = ColorManager.shared.secondaryColor
        let icon = ImageManager.shared.addTaskIcon
        addButton.setImage(icon, for: .normal)
        addButton.accessibilityIdentifier="add_task_button"
        addButton.tintColor = ColorManager.shared.primaryColor
        addButton.layer.cornerRadius = 8

        
        stackView.addArrangedSubview(addButton)
        
...
