//
//  TaskTrackerUITests.swift
//  TaskTrackerUITests
//
//  Created by Tihitinaw Buzuwek on 22/10/2025.
//

import XCTest
@testable import TaskTracker
final class TaskTrackerUITests: XCTestCase {

    override func setUpWithError() throws {
        // Put setup code here. This method is called before the invocation of each test method in the class.

        // In UI tests it is usually best to stop immediately when a failure occurs.
        continueAfterFailure = false

        // In UI tests it’s important to set the initial state - such as interface orientation - required for your tests before they run. The setUp method is a good place to do this.
    }

    override func tearDownWithError() throws {
        // Put teardown code here. This method is called after the invocation of each test method in the class.
    }

    @MainActor
    func testExample() throws {
        // UI tests must launch the application that they test.
        let app = XCUIApplication()
        app.launch()

        // Use XCTAssert and related functions to verify your tests produce the correct results.
    }
    @MainActor
    func testTaskAdd() throws {
        let app = XCUIApplication()
        app.launch()
        
        app.textFields["new_task_field"].tap()
        app.textFields["new_task_field"].typeText("test task")
        
        app.buttons["add_task_button"].tap()
        
        let newTaskCell=app.staticTexts["test task"]
        XCTAssertTrue(newTaskCell.exists,"new task in the list")
        
    }

    @MainActor
    func testLaunchPerformance() throws {
        // This measures how long it takes to launch your application.
        measure(metrics: [XCTApplicationLaunchMetric()]) {
            XCUIApplication().launch()
        }
    }
    
    
}
